Fix scrollbar

--- a/src/components/Column/styles.scss
+++ b/src/components/Column/styles.scss
@@ -42,16 +42,6 @@
     overflow-x: hidden;
 
     &::-webkit-scrollbar {
-        width: 1em;
-    }
-
-    &::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background-color: darkgrey;
-        outline: 1px solid slategrey;
+        width: 0;
     }
 }
